--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id = "container">
+            <div id = "cabecera">
+                Cabecera
+            </div>
             <div id = "post">
                 <h1>Este es el título atarctivo e interesante del post</h1>
                 <p>Y este es el parrao de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramast</p>
